--- a/src/style/main.css
+++ b/src/style/main.css
@@ -614,10 +614,18 @@ header .side-menu-active {
   height: 100%;
   background: rgb(0, 0, 0);
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(234, 150, 35, 0.4) 100%);
+}
+.hero .overlay .swiper {
+  width: 100%;
+  height: 100%;
+}
+.hero .overlay .swiper-slide {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 .hero .overlay .heading {
   width: 100%;
