--- a/src/style/sass/components/_hero.scss
+++ b/src/style/sass/components/_hero.scss
@@ -30,7 +30,9 @@
         height: 100%;
         object-fit: cover;
     }
+.abs-cont{
 
+}
     .overlay {
         position: absolute;
         top: 0;
@@ -38,10 +40,19 @@
         height: 100%;
         background: rgb(0, 0, 0);
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(234, 150, 35, 0.4) 100%);
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
+        .swiper{
+            width: 100%;
+            height: 100%;
+        }
+        .swiper-slide{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            
+        }
 
         .heading {
             width: 100%;
