--- a/src/style/sass/components/_parteners.scss
+++ b/src/style/sass/components/_parteners.scss
@@ -43,9 +43,14 @@
             font-size: 32px;
             font-weight: 700;
             color: #21201F;
+            margin-bottom: 12px;
+        }
+        h4{
+            font-size: 16px;
+            font-weight: 600;
+            color: #21201F;
             margin-bottom: 32px;
         }
-
         .numbers-cont {
             display: flex;
             align-items: center;
