--- a/src/style/main.css
+++ b/src/style/main.css
@@ -819,9 +819,32 @@ header .side-menu-active {
   font-size: 16px;
   font-weight: 600;
   text-align: justify;
+  margin-bottom: 32px;
 }
 @media screen and (max-width: 767px) {
   .hero-about .l-side p {
+    font-size: 14px;
+  }
+}
+.hero-about .l-side a {
+  height: 48px;
+  background-color: var(--main-color);
+  color: var(--white-color);
+  padding: 0 24px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  text-wrap: nowrap;
+  width: -moz-fit-content;
+  width: fit-content;
+  cursor: pointer;
+}
+@media screen and (max-width: 767px) {
+  .hero-about .l-side a {
     font-size: 14px;
   }
 }
@@ -839,7 +862,6 @@ header .side-menu-active {
 .hero-about .l-side .who-p {
   font-size: 16px;
   font-weight: 500;
-  margin-bottom: 0px;
   line-height: 28px;
   color: #F7F7F7;
 }
@@ -1088,8 +1110,25 @@ header .side-menu-active {
   font-size: 32px;
   font-weight: 700;
   color: #333333;
+  margin-bottom: 12px;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .about h2 {
+    font-size: 24px;
+  }
+}
+.about h3 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #333333;
   margin-bottom: 24px;
   text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .about h3 {
+    font-size: 20px;
+  }
 }
 .about p {
   font-size: 24px;
@@ -1232,6 +1271,12 @@ header .side-menu-active {
 .parteners .nums h3 {
   font-size: 32px;
   font-weight: 700;
+  color: #21201F;
+  margin-bottom: 12px;
+}
+.parteners .nums h4 {
+  font-size: 16px;
+  font-weight: 600;
   color: #21201F;
   margin-bottom: 32px;
 }
