--- a/src/style/sass/components/_about.scss
+++ b/src/style/sass/components/_about.scss
@@ -5,8 +5,23 @@
         font-size: 32px;
         font-weight: 700;
         color: #333333;
+        margin-bottom: 12px;
+        text-align: center;
+        @media screen and (max-width: 767px) {
+            font-size: 24px; 
+            
+        }
+    }
+    h3{
+        font-size: 24px;
+        font-weight: 700;
+        color: #333333;
         margin-bottom: 24px;
         text-align: center;
+        @media screen and (max-width: 767px) {
+            font-size: 20px;
+            
+        }
     }
     p{
         font-size: 24px;
