--- a/src/style/sass/components/_hero.scss
+++ b/src/style/sass/components/_hero.scss
@@ -276,12 +276,31 @@
             font-size: 16px;
             font-weight: 600;
             text-align: justify;
-
+            margin-bottom: 32px;
             @media screen and (max-width: 767px) {
                 font-size: 14px;
             }
         }
-
+        a{
+            height: 48px;
+            background-color: $main;
+            color: $white;
+            padding: 0 24px;
+            border-radius: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-weight: 600;
+            text-align: center;
+            text-wrap: nowrap;
+            width: -moz-fit-content;
+            width: fit-content;
+            cursor: pointer;
+            @media screen and (max-width: 767px) {
+                font-size: 14px;
+            }
+        }
         .who-q {
             font-size: 32px;
             font-weight: 600;
@@ -296,7 +315,6 @@
         .who-p {
             font-size: 16px;
             font-weight: 500;
-            margin-bottom: 0px;
             line-height: 28px;
             color: #F7F7F7;
 
